Reorg common files

--- a/lectures/review/review.tex
+++ b/lectures/review/review.tex
@@ -1,11 +1,11 @@
 \documentclass{article}
 
 \def\ParSkip{} 
-\input{ryantibs}
+\input{../../common/ryantibs}
 
 \title{Review: Stat/ML in a Nutshell \\ \smallskip
-\large Advanced Topics in Statistical Learning, Spring 2023}
-\author{}
+\large Advanced Topics in Statistical Learning, Spring 2023 \\ \smallskip
+Ryan Tibshirani}
 \date{}
 
 \begin{document}
@@ -946,7 +946,7 @@ as used in logistic regression, AdaBoost, and support vector machines,
 respectively. 
 
 \bibliographystyle{plainnat}
-\bibliography{ryantibs}
+\bibliography{../../common/ryantibs}
 
 \end{document}
 
