--- a/lectures/review/review.tex
+++ b/lectures/review/review.tex
@@ -465,10 +465,10 @@ However, there is an important subtlety here! The precise connection is this:
   signal-plus-noise}, \\  
 \hspace{130pt} \text{\emph{provided that each $x_i \indep \epsilon$}}.  
 \end{gather*}
-The reason for the extra condition is this: if didn't have independence of each
-$x_i$ and $\epsilon_i$, then after conditioning on $x_i$, $i=1,\dots,n$ in
-\eqref{eq:random_x}, the distributions of $\delta_i = \epsilon_i | x_i$,
-$i=1,\dots,n$ need not be identical. 
+The reason for the extra independence assumption is this: if didn't have
+independence of each $x_i$ and $\epsilon_i$, then after conditioning on $x_i$,
+$i=1,\dots,n$ in \eqref{eq:random_x}, the distributions of $\delta_i =
+\epsilon_i | x_i$, $i=1,\dots,n$ need not be identical.  
 
 \subsection{Independence of $x_i$ and $\epsilon_i$}
 
