--- a/lectures/review/review.tex
+++ b/lectures/review/review.tex
@@ -56,7 +56,7 @@ Let $X_n$, $n=1,2,3,\dots$ be a sequence of real-valued random variables.
   Meanwhile, $X_n = o_p(a_n)$ means that $X_n/a_n \pto 0$. 
 
 \item Law of large numbers (LLN): if $X_1,X_2,\dots$ are i.i.d.\ with $\mu =
-  \E[X_1]$, then for the sample mean 
+  \E[X_i]$, then for the sample mean 
   \[
   \bar{X}_n = \frac{1}{n} \sum_{i=1}^n X_n,
   \]
@@ -67,7 +67,7 @@ Let $X_n$, $n=1,2,3,\dots$ be a sequence of real-valued random variables.
   (almost sure convergence), i.e., when the mean is not defined (infinite). 
 
 \item Central limit theorem (CLT): under the same conditions, if additionally a
-  second moment exists and we let $\sigma^2 = \Var[X_1]$, then
+  second moment exists and we let $\sigma^2 = \Var[X_i]$, then
   \[
   \frac{\sqrt{n}(\bar{X}_n - \mu)}{\sigma} \dto Z,
   \]
