--- a/homeworks/homework1/homework1.tex
+++ b/homeworks/homework1/homework1.tex
@@ -254,7 +254,7 @@ In this exercise, we will analyze the risk of wavelet denoising.
   first define $\psi(x) = 1\{x \in [0,1/2]\} - 1\{x \in (1/2,1]\}$. Then the
   Haar basis is given by the collection          
   \[
-   1, \; \psi_{jk}, \; \text{for $k = 0, \dots, 2^{j-1}$ and $j = 0,1,2,\dots$},    
+   1, \; \psi_{jk}, \; \text{for $k = 0, \dots, 2^j-1$ and $j = 0,1,2,\dots$},     
   \]
   where $\psi_{jk}(x) = 2^{j/2} \psi(2^j x - k)$. (For notational convenience,
   we let $\psi_{-10} = 1$, and implicitly index all basis calculations starting 
