--- a/common/ryantibs.bib
+++ b/common/ryantibs.bib
@@ -1,12 +1,46 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Ryan Tibshirani at 2022-12-23 11:30:45 -0800 
+%% Created for Ryan Tibshirani at 2023-01-21 17:41:09 -0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{definetti1929funzione,
+	author = {{de Finetti}, Bruno},
+	booktitle = {Atti del Congresso Internazionale dei Matematici},
+	pages = {179--190},
+	title = {Funzione caratteristica di un fenomeno aleatorio},
+	year = {1929}}
+
+@article{definetti1937prevision,
+	author = {{de Finetti}, Bruno},
+	journal = {Annales de l'Institut Henri Poincar{\'e}},
+	number = {1},
+	pages = {1--68},
+	title = {La pr{\'e}vision: {Ses} lois logiques, ses sources subjectives},
+	volume = {7},
+	year = {1937}}
+
+@article{dynkin1953classes,
+	author = {Dynkin, Evgenii B.},
+	journal = {Uspekhi Matematicheskikh Nauk},
+	number = {2},
+	pages = {125--130},
+	title = {Classes of equivalent random quantities},
+	volume = {8},
+	year = {1953}}
+
+@article{hewitt1955symmetric,
+	author = {Hewitt, Edwin and Savage, Leonard J.},
+	journal = {Transactions of the American Mathematical Society},
+	number = {2},
+	pages = {470--501},
+	title = {Symmetric measures on {Cartesian} products},
+	volume = {80},
+	year = {1955}}
 
 @article{coifman2006diffusion,
 	author = {Ronald R. Coifman and Stephane Lafon},
@@ -3418,9 +3452,9 @@
 	volume = {3},
 	year = {2010}}
 
-@book{wasserman2006nonparametric,
-	address = {New York},
+@book{wasserman2006all,
 	author = {Larry Wasserman},
+	date-modified = {2023-01-21 17:40:55 -0800},
 	publisher = {Springer},
 	title = {All of Nonparametric Statistics},
 	year = 2006}
@@ -7208,16 +7242,16 @@
 	year = {2019}}
 
 @book{gine2021mathematical,
-  title={Mathematical Foundations of Infinite-Dimensional Statistical Models},
-  author={Gin{\'e}, Evarist and Nickl, Richard},
-  year={2021},
-  publisher={Cambridge University Press}}
+	author = {Gin{\'e}, Evarist and Nickl, Richard},
+	publisher = {Cambridge University Press},
+	title = {Mathematical Foundations of Infinite-Dimensional Statistical Models},
+	year = {2021}}
 
 @article{cohen2003harmonic,
-  title={Harmonic analysis of the space {BV}},
-  author={Cohen, Albert and Dahmen, Wolfgang and Daubechies, Ingrid and DeVore, Ronald A.},
-  journal={Revista Matem{\'a}tica Iberoamericana},
-  volume={19},
-  number={1},
-  pages={235--263},
-  year={2003}}
+	author = {Cohen, Albert and Dahmen, Wolfgang and Daubechies, Ingrid and DeVore, Ronald A.},
+	journal = {Revista Matem{\'a}tica Iberoamericana},
+	number = {1},
+	pages = {235--263},
+	title = {Harmonic analysis of the space {BV}},
+	volume = {19},
+	year = {2003}}
