--- a/homeworks/homework1/homework1.tex
+++ b/homeworks/homework1/homework1.tex
@@ -407,20 +407,20 @@ Generalize the univariate calculation given in the minimax lecture to the
 multivariate case, to show that for the $d$-dimensional H{\"o}lder ball 
 \[
 C^k(L; [0,1]^d) = \Big\{ f : [0,1]^d \to \R \,:\, | D^\alpha f (x) - D^\alpha
-f(y) | \leq L \|x-y\|_2 \; \text{for all $\|\alpha\|_1 < k$, and $x,y \in
-  [0,1]^d$} \Big\},
+f(z) | \leq L \|x-z\|_2 \; \text{for all $|\alpha| < k$, and $x,z \in [0,1]^d$}
+\Big\},  
 \]
-where $L>0$ is a constant (not growing with $n$), the following holds. Given
-data 
+where $k \geq 1$ is an integer and $L>0$ is a constant (not growing with $n$),
+the following holds. Given data  
 \[
 y_i = f(x_i) + \epsilon_i, \quad i=1,\dots,n,
 \]
 where $\epsilon_i \sim N(0,1)$, independently, for $i=1,\dots,n$, and $x_i \in
-[0,1]^d$, $i=1,\dots,n$ are fixed, there exists constants $C,N>0$ such that
-for all $n \geq N$,   
+[0,1]^d$, $i=1,\dots,n$ are fixed and are laid out on a regular lattice, there
+exists constants $C,N>0$ such that for all $n \geq N$, 
 \[
 \inf_{\hf} \, \sup_{f \in C^k_d(L; [0,1]^d)} \, \E \big \|f - \hf
-\big\|_{L^2([0,1]^d)}^2 \geq C n^{-\frac{2k}{2k+d}}. 
+\big\|_{L^2([0,1]^d)}^2 \geq C n^{-2k/(2k+d)}. 
 \]
 Make sure to write the full calculation from start to finish (even detailing the 
 steps that may be analogous to those in lecture). 
