--- a/lectures/nonpar_regression/nonpar_regression1.tex
+++ b/lectures/nonpar_regression/nonpar_regression1.tex
@@ -300,7 +300,7 @@ n \geq \epsilon^{-(2+d)/2}.
 \] 
 That is, as we increase $d$, we require \emph{exponentially more samples} $n$ in
 order to achieve an error bound of $\epsilon$. See Figure \ref{fig:curse} for an
-illustration with $\epsilon=0.1$.
+illustration.
 
 \begin{figure}[tb]
 \centering
