--- a/lectures/nonpar_regression/nonpar_regression1.tex
+++ b/lectures/nonpar_regression/nonpar_regression1.tex
@@ -338,7 +338,8 @@ One level up in sophistication is \emph{kernel smoothing} or \emph{kernel
 \int t K(t) \, dt = 0, \quad
 0 < \int t^2 K(t) \, dt < \infty.
 \]
-Three common examples are the rectangular kernel:
+Three common examples are the spherical (also called rectangular or boxcar)
+kernel: 
 \[
 K(t) = 
 \begin{cases}
@@ -389,15 +390,14 @@ regression estimator \eqref{eq:knn}, which can be thought of as a raw
 \label{fig:kernel}
 \end{figure}
 
-Of course, with a rectangular kernel, there is a strong similarity between
-kernel smoothing and kNN regression. The difference is that the former performs  
-averages over fixed neighborhoods, whereas the latter performs averages over 
+Of course, with a spherical kernel, there is a strong similarity between kernel
+smoothing and kNN regression. The difference is that the former performs
+averages over fixed neighborhoods, whereas the latter performs averages over
 adaptive neighborhoods---whose radius at $x$ is defined by the distance to the
-$k\th$-nearest neighbor. 
+$k\th$-nearest neighbor.
 
 In fact, under suitable conditions, it can be shown that kNN regression acts
-like rectangular kernel smoothing with a \emph{density-dependent local
-  bandwidth}      
+like spherical kernel smoothing with a \emph{density-dependent local bandwidth}       
 \[
 h(x) = \bigg[ \frac{k}{n p(x)} \bigg]^{1/d},
 \]
@@ -516,7 +516,7 @@ estimator doesn't seem to be in common use in practice.
 Assuming that $f_0 \in C^1(L; [0,1]^d)$, the underlying regression function
 $f_0$ is Lipschitz continuous on $[0,1]^d$ for some constant $L>0$, and we place
 mild conditions on the input distribution, the kernel smoothing estimator with a  
-rectangular kernel and bandwidth \smash{$h \asymp n^{-1/(2+d)}$} satisfies    
+spherical kernel and bandwidth \smash{$h \asymp n^{-1/(2+d)}$} satisfies    
 \begin{equation}
 \label{eq:kernel_rate}
 \E\|\hf - f_0\|_2^2 \lesssim n^{-2/(2+d)} \quad \text{in probability},
@@ -556,8 +556,8 @@ with variance $\sigma^2>0$,
 \bigg[ \sum_{i=1}^n w_i(x_0) \bigg]  
 \leq \sigma^2 \bigg[ \max_{i=1,\dots,n} w_i(x_0) \bigg].
 \]
-For the rectangular kernel, using $P_n$ for the empirical distribution of
-$x_1,\dots,x_n$, we have 
+For the spherical kernel, using $P_n$ for the empirical distribution of
+$x_1,\dots,x_n$, we have  
 \[
 w_i(x_0) = \frac{1\{ \|x_0-x_i\|_2 \leq h \}}{n P_n(B(x_0, h)) } \leq
 \frac{1}{cnh^d},
