--- a/common/ryantibs.bib
+++ b/common/ryantibs.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Ryan Tibshirani at 2023-01-21 17:41:09 -0800 
+%% Created for Ryan Tibshirani at 2023-01-25 23:11:40 -0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{demmler1975oscillation,
+	author = {A. Demmler and Christian Reinsch},
+	journal = {Numerische Mathematik},
+	number = 5,
+	pages = {375--382},
+	title = {Oscillation matrices with spline smoothing},
+	volume = 24,
+	year = 1975}
+
+@unpublished{barber2022conformal,
+	author = {Rina Foygel Barber and Emmanuel J. Cand{\`e}s and Aaditya Ramdas and Ryan J. Tibshirani},
+	date-added = {2023-01-23 11:46:27 -0800},
+	date-modified = {2023-01-23 11:48:59 -0800},
+	note = {arXiv: 2202.13415},
+	title = {Conformal prediction beyond exchangeability},
+	year = {2022}}
 
 @inproceedings{definetti1929funzione,
 	author = {{de Finetti}, Bruno},
@@ -7202,15 +7219,11 @@
 	title = {Nonparametric Density Estimation by Histogram Trend Filtering},
 	year = {2016}}
 
-@article{haris2019generalized,
-	archiveprefix = {arXiv},
+@unpublished{haris2019generalized,
 	author = {Haris, Asad and Simon, Noah and Shojaie, Ali},
-	eprint = {1903.04641},
-	eprinttype = {arxiv},
-	journal = {arXiv:1903.04641 [math, stat]},
-	month = mar,
-	primaryclass = {math, stat},
-	title = {Generalized Sparse Additive Models},
+	date-modified = {2023-01-23 11:48:15 -0800},
+	note = {arXiv: 1903.04641},
+	title = {Generalized sparse additive models},
 	year = {2019}}
 
 @manual{nason2016wavethresh,
